--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,23 @@ board = attiny85
 framework = arduino
 
 board_build.f_cpu = 16000000L
-upload_protocol = atmel-ice
+;upload_protocol = atmel-ice ; With the proper programmer
+
+; These lines below are for when using an Arduino as ISP
+; https://docs.platformio.org/en/latest/platforms/atmelavr.html
+upload_protocol = custom
+upload_port = SERIAL_PORT_HERE
+upload_speed = 19200
+upload_flags =
+    -C
+    ; use "tool-avrdude-megaavr" for the atmelmegaavr platform
+    ${platformio.packages_dir}/tool-avrdude/avrdude.conf
+    -p
+    $BOARD_MCU
+    -P
+    $UPLOAD_PORT
+    -b
+    $UPLOAD_SPEED
+    -c
+    stk500v1
+upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
