Frequency change and port specification

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ board_build.f_cpu = 16000000L
 ; These lines below are for when using an Arduino as ISP
 ; https://docs.platformio.org/en/latest/platforms/atmelavr.html
 upload_protocol = custom
-upload_port = SERIAL_PORT_HERE
+upload_port = /dev/cu.usbmodem101
 upload_speed = 19200
 upload_flags =
     -C
