--- a/platformio.ini
+++ b/platformio.ini
@@ -34,3 +34,7 @@ upload_flags =
     -c
     stk500v1
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+
+board_fuses.lfuse = 0xE2
+board_fuses.hfuse = 0xDF
+board_fuses.efuse = 0xFF
