--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:attiny85]
+[platformio]
+default_envs = attiny85
+
+[env]
 platform = atmelavr
-board = attiny85
 framework = arduino
+
+[env:attiny85]
+board = attiny85
 
 board_build.f_cpu = 8000000L
 ;upload_protocol = atmel-ice ; With the proper programmer
@@ -38,3 +43,10 @@ upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
 board_fuses.lfuse = 0xE2
 board_fuses.hfuse = 0xDF
 board_fuses.efuse = 0xFF
+
+[env:nano]
+platform = atmelavr
+board = nanoatmega328
+monitor_speed = 115200
+
+build_flags = -D ARD_NANO ; Used to toggle Nano-specific code
