--- a/platformio.ini
+++ b/platformio.ini
@@ -17,29 +17,8 @@ framework = arduino
 
 [env:attiny85]
 board = attiny85
-
 board_build.f_cpu = 8000000L
-upload_protocol = atmelice_isp ; With the proper programmer
-
-; These lines below are for when using an Arduino as ISP
-; https://docs.platformio.org/en/latest/platforms/atmelavr.html
-; upload_protocol = custom
-; upload_port = /dev/cu.usbmodem101
-; upload_speed = 19200
-; upload_flags =
-;     -C
-;     ; use "tool-avrdude-megaavr" for the atmelmegaavr platform
-;     ${platformio.packages_dir}/tool-avrdude/avrdude.conf
-;     -p
-;     $BOARD_MCU
-;     -P
-;     $UPLOAD_PORT
-;     -b
-;     $UPLOAD_SPEED
-;     -c
-;     stk500v1
-; upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
-
+upload_protocol = atmelice_isp
 board_fuses.lfuse = 0xE2
 board_fuses.hfuse = 0xDF
 board_fuses.efuse = 0xFF
