--- a/platformio.ini
+++ b/platformio.ini
@@ -9,19 +9,21 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = attiny85
+default_envs = attiny1616
 
 [env]
-platform = atmelavr
 framework = arduino
 
-[env:attiny85]
-board = attiny85
-board_build.f_cpu = 8000000L
-upload_protocol = atmelice_isp
-board_fuses.lfuse = 0xE2
-board_fuses.hfuse = 0xDF
-board_fuses.efuse = 0xFF
+[env:attiny1616]
+platform = atmelmegaavr
+board = ATtiny1616
+; change microcontroller
+board_build.mcu = attiny1616
+
+; change MCU frequency
+board_build.f_cpu = 20000000L
+upload_protocol = atmelice_updi
+
 
 [env:nano]
 platform = atmelavr
